fix missing border (#1929)

--- a/client/components/package/contents.scss
+++ b/client/components/package/contents.scss
@@ -22,7 +22,7 @@ $darkClaret: #780032;
 }
 
 .package__content-item:last-child {
-	border: 0;
+	border-bottom: 0;
 }
 
 .package__link {
